por tercera vez comprendiendo el anidado, katty tu puedesgit add .

--- a/app/views/animals/_animal.html.erb
+++ b/app/views/animals/_animal.html.erb
@@ -1,10 +1,9 @@
 <div id="<%= dom_id animal %>">
-  <p>
-    <strong>Name:</strong>
-    <%= animal.name %>
-    <strong>Granjero:</strong>
-<%= animal.farmer.name %>
-
-  </p>
-
+ <p>
+ <strong>Name:</strong>
+ <%= animal.name %>
+ <strong>Granjero:</strong>
+ <%= animal.farmer %>
+ </p>
 </div>
+
