--- a/app/views/farms/_form.html.erb
+++ b/app/views/farms/_form.html.erb
@@ -15,6 +15,18 @@
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
+<h3>Granjeros</h3>
+<div>
+  <%= form.fields_for :farmers do |farmer| %>
+  <%= farmer.label :name, style: "display: block" %>
+  <%= farmer.text_field :name %>
+  <%= farmer.label :age, style: "display: block" %>
+  <%= farmer.text_field :age %>
+  <br>
+  <%= farmer.check_box :_destroy %>
+  <%= farmer.label :_destroy, "Borrar" %>
+  <% end %>
+</div>
 
   <div>
     <%= form.submit %>
