--- a/app/views/farms/_farm.html.erb
+++ b/app/views/farms/_farm.html.erb
@@ -1,7 +1,15 @@
 <div id="<%= dom_id farm %>">
   <p>
     <strong>Name:</strong>
-    <%= farm.name %>
-  </p>
+  <%= farm.name %>
+  <strong>Granjeros</strong>
+  <% farm.farmers.each do |farmer| %>
+  <span><%= farmer.name %> </span>
+  <% end %>
+  <span>
+  <%= link_to "Show this farm", farm %> |
+  <%= button_to "Destroy this farm", @farm, method: :delete %>
+  </span>  
+    </p>
 
 </div>
